--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,10 @@
 button {
   @apply focus:outline-none;
 }
+
+.border-color {
+  @apply border-gray-200;
+}
+.text-gray {
+  @apply text-gray-500
+}
